--- a/chrome/locale/fr/timerfox.properties
+++ b/chrome/locale/fr/timerfox.properties
@@ -1,1 +1,1 @@
-extensions.{D2E63ECF-1CF8-58EB-BC69-C8E7E482C336}.description=Un compte à rebours très simple avec une durée que vous définissez et un message d\'alerte lorsque le temps est écoulé.
+extensions.{D2E63ECF-1CF8-58EB-BC69-C8E7E482C336}.description=Un compte à rebours très simple avec une durée que vous définissez et un message d’alerte lorsque le temps est écoulé.
